fixed spacing in 2 col alignment

--- a/flask_app/static/css/design.css
+++ b/flask_app/static/css/design.css
@@ -51,6 +51,7 @@
 
 .person-well {
     height:210px;
+    padding-top: 7px;
 }
 
 .media {
